[gd_scene load_steps=3 format=3 uid="uid://byj333fs5rsv2"]

[ext_resource type="Script" path="res://scenes/statue.gd" id="1_jnc2d"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xye3n"]
radius = 16.0
height = 60.0

[node name="statue" type="CharacterBody2D"]
script = ExtResource("1_jnc2d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_xye3n")
debug_color = Color(0, 0.454902, 0.364706, 0.419608)

[node name="wait_for_shoot" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="statue_ray" type="RayCast2D" parent="."]

[connection signal="timeout" from="wait_for_shoot" to="." method="_on_wait_for_shoot_timeout"]
